fix [client]: logo alignment

--- a/client/components/header/header.module.scss
+++ b/client/components/header/header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem;
   position: relative;
 
   .left {
@@ -23,6 +23,7 @@
       font-size: 40px;
       font-family: 'Teko', sans-serif;
       color: var(--col-primary);
+      transform: translateY(2px);
     }
   }
 
